[tool.poetry]
name = "pygiphy"
version = "0.1.0"
description = ""
authors = ["Zach Schumacher <zachary@simplebet.io>"]

[tool.poetry.dependencies]
python = ">=3.7,<=3.10"
httpx = "^0.22.0"
pydantic = "^1.9.0"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
pytest-vcr = "^1.0.2"
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.13"
markdown-include = "^0.6.0"
devtools = "^0.8.0"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
lazydocs = "^0.4.8"

[tool.isort]
force_grid_wrap = 0
force_single_line = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3
skip = ["venv", ".venv", "media", "staticfiles", "pygiphy/__init__.py"]
use_parentheses = true

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.circleci
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | media
    | staticfiles
  )/
)
'''

[tool.coverage.run]
omit = [
    "pydapper/types.py",
    "tests/*",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
